# Sports_Ranking_Systems

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg
Project/: __version__.py  config.py  core.py
Tests/: context.py  test_pytemplate.py  test_src.py
docs/: Changelog.md  Resources.md  SOS_Information.md
reports/flake8/: index.html
results/: li.csv
src/: __init__.py  config.py  core.py  sports_classes.py  util.py
